2003-10-09  Naba Kumar  <naba@gnome.org>

	* src/cvs_gui.c: Fixed a UI bug (hides the unwanted frame).
	
2003-10-08  Naba Kumar  <naba@gnome.org>

	* src/source.c: Fixed a GETTEXT typo error.
	* anjuta.glade: Made 'Sorted in order you open them' default option
	for editor tabs.

	Patch from: Jean-Noel Guiheneuf  <jnoel@saudionline.com.sa>
	* anjuta.glade, data/properties/anjuta.properties:
	Fixed the freeze of the "Preferences" combos at the first Anjuta
	init is generated by:
		- a not complete translation of preferences.c file
		- a difference between 2 names in anjuta.glade and
		anjuta.properties (arrows --> Arrows , bottom --> Bottom)
		- the same name given to 3 combos (anjuta.glade).
		
	* src/find_text.c: If the "whole document" mode is selected,
	a new search will select the next occurrence (Bug #764954).
	It is now possible to use the shortcuts to search next or previous
	occurrence even if the search dialog has the focus.	Bug #790318
	
	* src/main_menubar_def.h: "Select code block" shortcut; the new
	shortcut is now Alt+L instead of Alt+B (already used by _Build menu).
	(Bug #811016).

	Patch from: Richard Lee  <r.h.lee@comcast.net>
	* tagmanager/include/tm_tag.h, tagmanager/tm_tag.c,
	tagmanager/tm_workspace.c: The following is a patch to fix a
	seemingly random occurence where Anjuta would crash when a
	certain key was pressed.

2003-09-29  Naba Kumar  <naba@gnome.org>

	* src/find_in_files.c: Ignores binary by default. Disabled the option
	of NOCVS search, because launcher does not use sh and hence can not
	pipe.
	
	* src/project_dbase.c, src/session.[h,c]: Fixed to save the
	"clean before build" state in project session and not in account session,
	otherwise the state gets reflected to other projects causing annoyance.
	
	* src/compiler_options.c: Fixed a bug where compiler options were always
	claimed 'modified'.

	* src/build_project.c, data/properties/anjuta.properties,
	src/commands.[h]: Fixed a bad bug where clean-before-build
	doesn't work.
	